Update repo link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Tomwf</a>.
+    Coded by <a href="https://github.com/tomwf/FEM-tip-calculator-app-main">Tomwf</a>.
   </div>
 </body>
 </html>
